--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: php
 php:
-  - '5.3'
-  - '5.4'
-  - '5.5'
+#  - '5.3'
+#  - '5.4'
+#  - '5.5'
   - '5.6'
   - '7.0'
   - hhvm
@@ -11,7 +11,7 @@ sudo: false
 
 install:
   - composer install --no-interaction
-  - composer require phpunit/phpunit
+#  - composer require phpunit/phpunit
 
 script:
   - phpunit --stop-on-failure
