--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - composer install --no-interaction
 
 script:
-  - phpunit --stop-on-failure
+  - /bin/bash phpunit --stop-on-failure
 
 after_success:
   - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php vendor/bin/coveralls -v; fi;'
